fixed album covers max height and width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,8 @@ footer {
   height: 100%;
   width: 100%;
   padding: 5px;
+  max-width: 300px;
+  max-height: 350px;
 }
 
 /* ----------- Flip cards home - Code used from from w3 Schools------------------*/
@@ -527,6 +529,7 @@ footer {
   text-shadow: 2px 2px black;
   min-width: 400px;
   max-width: 550px;
+  
   
 }
 
